--- a/.github/workflows/test-crawler.yml
+++ b/.github/workflows/test-crawler.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup node
       uses: actions/setup-node@v1
     - name: Run test-crawler ${{ github.event.client_payload.projectId }}
-      uses: ../actions/test-crawler-run
+      uses: ./.github/actions/test-crawler-run
 #      run: |
 #        ROOT_FOLDER=`pwd` npx -p test-crawler test-crawler-cli --project ${{ github.event.client_payload.projectId }}
     - name: Commit changes
