--- a/.github/actions/test-crawler-run/action.yml
+++ b/.github/actions/test-crawler-run/action.yml
@@ -4,5 +4,5 @@ inputs:
     description: 'Project ID to run'
     default: ${{ github.event.client_payload.projectId }}
 runs:
-  using: 'node'
+  using: 'node12'
   main: 'index.js'
