--- a/.github/workflows/test-crawler.yml
+++ b/.github/workflows/test-crawler.yml
@@ -1,12 +1,10 @@
 
 name: Test-crawler CI
 
-#on: [repository_dispatch]
-#
 on:
   repository_dispatch:
     types: [test-crawler]
-    
+
 jobs:
   build:
 
@@ -17,9 +15,7 @@ jobs:
     - name: Setup node
       uses: actions/setup-node@v1
     - name: Run test-crawler ${{ github.event.client_payload.projectId }}
-      uses: ./.github/actions/test-crawler-run
-#      run: |
-#        ROOT_FOLDER=`pwd` npx -p test-crawler test-crawler-cli --project ${{ github.event.client_payload.projectId }}
+      run: apiel/test-crawler/github/actions/test-crawler-run@master
     - name: Commit changes
       run: |
         git config --local user.email "action@github.com"
