--- a/.github/workflows/test-crawler.yml
+++ b/.github/workflows/test-crawler.yml
@@ -6,7 +6,7 @@ on:
     types: [test-crawler]
 
 jobs:
-  build:
+  test-crawler:
 
     runs-on: ubuntu-latest
 
@@ -14,12 +14,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run test-crawler ${{ github.event.client_payload.projectId }}
       uses: apiel/test-crawler/actions/run@master
-    - name: Commit changes
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "Test-crawler"
-        git add .
-        git status
-        git commit -m "[test-crawler] CI save" || echo "No changes to commit"
-        git pull
-        git push "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
+    - name: Push changes
+      uses: apiel/test-crawler/actions/push@master
