[test-crawler] save file

--- a/.github/workflows/test-crawler.yml
+++ b/.github/workflows/test-crawler.yml
@@ -16,3 +16,5 @@ jobs:
       uses: apiel/test-crawler/actions/run@master
     - name: Push changes
       uses: apiel/test-crawler/actions/push@master
+        with:
+            token: ${{ secrets.GITHUB_TOKEN }}
