[test-crawler] save file

--- a/.github/workflows/test-crawler.yml
+++ b/.github/workflows/test-crawler.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test-crawler:
-
+    if: github.event.client_payload.os == 'default'
     runs-on: macos-latest
 
     steps:
@@ -16,6 +16,23 @@ jobs:
       run: |
         sudo safaridriver --enable
         safaridriver -p 0 &
+    - name: Run test-crawler ${{ github.event.client_payload.projectId }}
+      uses: apiel/test-crawler/actions/run@master
+    - name: Push changes
+      uses: apiel/test-crawler/actions/push@master
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+
+  test-crawler-ie:
+    if: github.event.client_payload.os == 'win'
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: warrenbuckley/Setup-Nuget@v1
+    - name: Enable ie driver
+      run: |
+        nuget install Selenium.WebDriver.IEDriver -Version 3.150.0
     - name: Run test-crawler ${{ github.event.client_payload.projectId }}
       uses: apiel/test-crawler/actions/run@master
     - name: Push changes
