[test-crawler] save file

--- a/.github/workflows/test-crawler.yml
+++ b/.github/workflows/test-crawler.yml
@@ -16,6 +16,19 @@ jobs:
       run: |
         sudo safaridriver --enable
         safaridriver -p 0 &
+    - name: testyo
+        run: |
+          ls ~
+          pwd
+          ls
+          ls ~/node_modules/puppeteer-core
+    - name: Cache node modules
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: ~/node_modules/puppeteer-core/.local-chromium
+          key: puppeteer-local-chromium
     - name: Run test-crawler ${{ github.event.client_payload.projectId }}
       uses: apiel/test-crawler/actions/crawl@master
     - name: Push changes
